# SNAKE

./: .gitignore  CMakeLists.txt  README.md  snake.cpp
assets/: main.frag  main.vert  plain.frag
